# JARVIS

./: .gitignore  .gitmodules  .mcp.json  CLAUDE.md  README.md  backlog.md  orchestrator-setup-prompt.md  package-lock.json  package.json  repo-structure.txt
.claude/: CLAUDE.md
backlog/: changelog-reviewer.md  model-selection-learning.md  observability-dashboard.md  self-improvement-mining.md  telegram-inbox.md  workspace-context-files.md
changelogs/: CHANGELOG.md  claude-orchestrator-changelog.md  meeting-assistant-changelog.md  orchestrator-changelog.md  sdk-line-twin-changelog.md  strokmatic.diemaster-changelog.md  strokmatic.sdk-changelog.md  strokmatic.spotfusion-changelog.md  strokmatic.visionking-changelog.md
config/: meeting-assistant.json  project-codes.json  self-improvement.json
dashboard/: server.js
docs/: SETUP.md  SKILLS.md  TROUBLESHOOTING.md  clickup-api-reference.md  guia-claude-code-strokmatic.md  lessons-learned-sprint-planning.md  lessons-learned.md  strokmatic-master-context.md  tdd-guidelines.md
experiments/: README.md  sg3-portal-probe.mjs  (+1 more)
tools/voice-interface/pipeline/: .gitignore  README.md  pyproject.toml
tools/voice-interface/pipeline/config/: jarvis_linux.ppn  system-prompt.md
tools/voice-interface/pipeline/data/voice-sessions/: .gitkeep
tools/voice-interface/pipeline/src/: __main__.py  audio.py  config.py  conversation.py  llm.py  main.py  orb_bridge.py  session.py  stt.py  tts.py  wake_word.py
tools/voice-interface/pipeline/tests/: test_audio.py  test_conversation.py  test_llm.py  test_orb_bridge.py  test_stt.py
(+1051 files in other folders)
