[project]
name = "jarvis-voice-pipeline"
version = "0.1.0"
description = "JARVIS Voice Interface — wake word, STT, LLM, TTS pipeline"
requires-python = ">=3.12"
dependencies = [
    "pvporcupine~=3.0",
    "deepgram-sdk~=3.0",
    "elevenlabs~=1.0",
    "pyaudio~=0.2.14",
    "websockets~=13.0",
]

[project.optional-dependencies]
dev = ["pytest~=8.0", "pytest-asyncio~=0.24"]

[project.scripts]
jarvis-voice = "src.main:cli_entry"

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
